use bandwidth based evaluation range; update first IR peak algo; update readme

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2959,15 +2959,18 @@
       const variance = squaredDifferences.reduce((sum, value) => sum + value, 0) / array.length;
       return Math.sqrt(variance);
     }
-    async function getFirstIRPeak(idx) {
+    async function getFirstIRPeak(idx, start=20, end=120) {
       // finds the time in seconds of the first IR peak that exceeds the standard deviation of the IR
-      await postSafe(`http://localhost:4735/measurements/${idx}/ir-windows`, { addFDW: "true", fdwWidthCycles: "15" }, "Update processed");
-      const response = await fetchSafe('impulse-response?unit=percent&windowed=true&normalised=true&samplerate=48000', idx);
+      const bandpassedResponse = await genBandpassedResponse(idx, start, end); // reduces noise that can mask group delay
+      const bandpassedResponseIdx = Object.keys(bandpassedResponse.results)[0];
+      await postSafe(`http://localhost:4735/measurements/${bandpassedResponseIdx}/ir-windows`, { addFDW: "true", fdwWidthCycles: "15" }, "Update processed");
+      const response = await fetchSafe('impulse-response?unit=percent&windowed=true&normalised=true&samplerate=48000', bandpassedResponseIdx);
       const bytes = Uint8Array.from(atob(response.data), c => c.charCodeAt(0));
       const dataView = new DataView(bytes.buffer);
       const totalSamples = bytes.length / 4;
       const startTime = response.startTime;
       const sampleInterval = response.sampleInterval;
+      await postDelete(bandpassedResponseIdx);
       // use to calculate standard deviation
       const impulseArray = [];
       for (let i = 0; i < totalSamples; i++) {
@@ -2987,7 +2990,6 @@
         }
         if (inPeak && IRValuePercent < threshold / 2) { break; }
       }
-      await postSafe(`http://localhost:4735/measurements/${idx}/ir-windows`, { addFDW: "false" }, "Update processed");
       return startTime + sampleInterval * peakSampleNumber;
     }
     async function getMaxIRWindow(idxs) {
@@ -3019,7 +3021,7 @@
       }
       combinedSubIRs4AF[pos] = impulseArray;
     }
-    async function directional2standard(start=10, end=320) {
+    async function directional2standard() {
       console.warn("Converting from directional to standard bass for a better sound experience...");
       let measurements = await fetch_mREW();
       let mCount = Object.keys(measurements).length;
@@ -3028,12 +3030,9 @@
       const swCmdIdsWithEPResponseIndices = {};
       for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
         const mlpIdx = cmdIdIndices[commandId[i]][0];
-        // use bandpassed measurement to determine first peak for establishing proximity based delay range
-        const mlpWithBPF = await genBandpassedResponse(mlpIdx, start, end); // cleanup LF noise and irrelevant HF
-        const mlpWithBPFIdx = Object.keys(mlpWithBPF.results)[0];
-        swCmdIdsWithFirstIRPeak[commandId[i]] = await getFirstIRPeak(mlpWithBPFIdx);
-        // generate excess phase response from the bandpassed measurement and use it for alignment
-        const mlpEPResponse = await genExcessPhaseResponse(mlpWithBPFIdx);
+        swCmdIdsWithFirstIRPeak[commandId[i]] = await getFirstIRPeak(mlpIdx);
+        // generate excess phase response and use it for alignment
+        const mlpEPResponse = await genExcessPhaseResponse(mlpIdx);
         const mlpEPResponseIdx = Object.keys(mlpEPResponse.results)[0];
         swCmdIdsWithEPResponseIndices[commandId[i]] = mlpEPResponseIdx;
         await fetch_mREW(mlpEPResponseIdx, 'PUT', { title: measurements[mlpIdx].title }); // reuse same name
@@ -3042,14 +3041,20 @@
       const sortedSwCmdIds = Object.entries(swCmdIdsWithFirstIRPeak).sort((a, b) => a[1] - b[1]).map(row => row[0]);
       console.info(`Alignment order based on proximity: ${sortedSwCmdIds}`);
       // index 0 is closest subwoofer and it is treated as the reference
-      let cmdIds = sortedSwCmdIds[0]; // holds the aggregate commandIds as subwoofers are combined
-      let currSubIdx = swCmdIdsWithEPResponseIndices[sortedSwCmdIds[0]]; // holds aggregate EP response
+      let aggCmdIds = sortedSwCmdIds[0]; // holds the aggregate commandIds as subwoofers are combined
+      let aggSubEPIdx = swCmdIdsWithEPResponseIndices[sortedSwCmdIds[0]]; // holds aggregate EP response
       const refSubFirstIRPeak = swCmdIdsWithFirstIRPeak[sortedSwCmdIds[0]]; // closest subwoofer
+      // initial evaluation range based on reference subwoofer bandwidth
+      let startFreq = await getAbsLow3dBPoint(cmdIdIndices[sortedSwCmdIds[0]][0]);
+      let endFreq = await getAbsHigh6dBPoint(cmdIdIndices[sortedSwCmdIds[0]][0]);
       for (let i = 1; i < sortedSwCmdIds.length; i++) {
         const thisSubCmdId = sortedSwCmdIds[i];
         const thisSubNumber = parseInt(thisSubCmdId.slice(-1)); // used for delay limit calculations
-        const thisSubIdx = swCmdIdsWithEPResponseIndices[sortedSwCmdIds[i]];
+        const thisSubEPIdx = swCmdIdsWithEPResponseIndices[sortedSwCmdIds[i]];
         const thisSubFirstIRPeak = swCmdIdsWithFirstIRPeak[sortedSwCmdIds[i]];
+        // use aggregate subwoofer bandwidths to set evaluation range
+        startFreq = Math.min(startFreq, await getAbsLow3dBPoint(cmdIdIndices[sortedSwCmdIds[i]][0]));
+        endFreq = Math.max(endFreq, await getAbsHigh6dBPoint(cmdIdIndices[sortedSwCmdIds[i]][0]));
         // set delay limits based on first IR peak delta to prioritize time alignment
         const IRPeakDelta = 1000 * (refSubFirstIRPeak - thisSubFirstIRPeak);
         let loDelayLimit = IRPeakDelta - minDelayRangeSpan;
@@ -3058,17 +3063,17 @@
         const [loDelay, hiDelay] = getDelayRangeOf(mSec[nSpeakers + thisSubNumber], nSpeakers + 1, nSpeakers + nSubs);
         loDelayLimit = Math.min(Math.max(loDelayLimit, loDelay), hiDelay);
         hiDelayLimit = Math.min(Math.max(hiDelayLimit, loDelay), hiDelay);
-        console.log(`Aligning ${thisSubCmdId} to ${cmdIds}...`);
-        const [requiredDelay, isInverted, sumIndex] = await alignMsub(currSubIdx, thisSubIdx,
-                                                                      start, end,
+        console.log(`Aligning ${thisSubCmdId} to ${aggCmdIds} over ${startFreq.toFixed(2)}hz - ${endFreq.toFixed(2)}hz...`);
+        const [requiredDelay, isInverted, sumIndex] = await alignMsub(aggSubEPIdx, thisSubEPIdx,
+                                                                      startFreq, endFreq,
                                                                       loDelayLimit, hiDelayLimit);
-        currSubIdx = sumIndex;
-        cmdIds += ` & ${thisSubCmdId}`;
+        aggSubEPIdx = sumIndex;
+        aggCmdIds += ` & ${thisSubCmdId}`;
         mSec[nSpeakers + thisSubNumber] += (requiredDelay / 1000);
         invertSub[nSpeakers + thisSubNumber] = isInverted;
       }
       // cleanup all temp measurements
-      for (let i = currSubIdx; i > mCount; i--) { // make sure mCount isn't updated between start of function and here
+      for (let i = aggSubEPIdx; i > mCount; i--) { // make sure mCount isn't updated between start of function and here
         await postDelete(i);
       }
       // normalize median subwoofer delay to t=0
