--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -576,7 +576,7 @@
         <label>
           <input type="checkbox" id="alignToLCR" onchange="updateCheckboxStates()">
           Align subwoofer to LCR speakers
-          <span class="explanation">Forces subwoofer alignment using LCR speakers exclusively. By default subwoofer is aligned using ALL speakers.</span>
+          <span class="explanation">Forces subwoofer alignment using LCR speakers exclusively. By default, subwoofer is aligned using ALL speakers.</span>
         </label>
         <label>
           <input type="checkbox" id="noInversion" onchange="updateCheckboxStates()">
