--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -576,7 +576,7 @@
         <label>
           <input type="checkbox" id="alignToLCR" onchange="updateCheckboxStates()">
           Align subwoofer to LCR speakers
-          <span class="explanation">Forces subwoofer alignment using LCR speakers exclusively. By default, subwoofer is aligned using ALL speakers.</span>
+          <span class="explanation">Optimizes subwoofer alignment using LCR speakers exclusively. By default, subwoofer is aligned using ALL speakers.</span>
         </label>
         <label>
           <input type="checkbox" id="noInversion" onchange="updateCheckboxStates()">
@@ -2003,7 +2003,7 @@
       const SWIndices = cmdIdIndices[commandId[nChannels]];
       if (SWIndices.length > 1) {
         const SWMaxDelta = await calculateMaxDeltaOfResponses(SWIndices, 30, 80);
-        console.log(`${commandId[nChannels]} response variation between <${SWIndices.length}> microphone position(s) over 30hz-80hz: ±${(SWMaxDelta / 2).toFixed(2)}dB`);
+        console.log(`${commandId[nChannels]} response variation between <${SWIndices.length}> microphone position(s) over 30hz - 80hz: ±${(SWMaxDelta / 2).toFixed(2)}dB`);
       }
     }
     async function alignVol2MLP(indices) {
@@ -2052,6 +2052,7 @@
       console.infoUpdate(`Spatially averaged all channels.`);
       console.info("Deleting processed measurements...");
       for (let i = mCount; i > 0; i--) {
+        console.infoUpdate(`Deleting processed measurements... (${mCount - i + 1}/${mCount})`);
         await postDelete(i);
       }
       console.infoUpdate("Deleted processed measurements.");
@@ -3150,6 +3151,7 @@
       console.info("Cleaning up individual subwoofer response(s)...");
       const individualSWIndices = swIndices.flat().sort(function(a, b) { return a - b; });
       for (let i = individualSWIndices.length - 1; i >= 0; i--) {
+        console.infoUpdate(`Cleaning up individual subwoofer response(s)... (${individualSWIndices.length - i}/${individualSWIndices.length})`);
         await postDelete(individualSWIndices[i]);
       }
       console.infoUpdate("Cleaned up individual subwoofer response(s).");
